deployment/influx/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gateway-influxdb
spec:
  selector:
    app: gateway-influxdb
  ports:
    - name: default
      port: 8086
      targetPort: 8086
  type: LoadBalancer
