deployment/influx/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: influx-ingress
spec:
  rules:
    - host: influxdb.gateway.info
      http:
        paths:
          - path: /
            backend:
              serviceName: gateway-influxdb
              servicePort: 8086
